feat: fix some issues

--- a/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
+++ b/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```dart\n",
+    "```default\n",
     "import 'package:daily_practices_app/app/app.dart';\n",
     "import 'package:flutter/material.dart';\n",
     "import 'package:flutter_test/flutter_test.dart';\n",
@@ -128,7 +128,8 @@
     "      expect(activeItemFinder, findsOneWidget);\n",
     "    });\n",
     "  });\n",
-    "}```"
+    "}\n",
+    "```"
    ]
   },
   {
@@ -184,18 +185,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "dd300d7e01d5abe72068fde2e71abd784427bf0a53f01ec55a1757e7e42c23eb"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
