Update blog post deel 3

--- a/posts/2022-09-27-Flutter-app-deel-3-CI-nog-geen-CD/index.ipynb
+++ b/posts/2022-09-27-Flutter-app-deel-3-CI-nog-geen-CD/index.ipynb
@@ -17,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +25,9 @@
     "\n",
     "Hallootjes,\n",
     "\n",
-    "welkom bij de volgende stap in het proces om een Flutter app te maken. In de vorige post heb ik de app-structuur bepaald, maar voordat wij daaraan beginnen gaan we eerst een Continuous Integration (CI) pipeline opzetten. Deze pipeline zorgt ervoor dat wanneer er nieuwe code wordt gepushed er automatisch wordt gecontroleerd of de bestaande code en app nog naar behoren werken. Dit doe je door tests te schrijven die vervolgens worden uitgevoerd door je pipeline.\n"
+    "welkom bij de volgende stap in het proces om een Flutter app te maken. In de vorige post heb ik de app-structuur bepaald, maar voordat wij daaraan beginnen gaan we eerst een Continuous Integration (CI) pipeline opzetten. Deze pipeline zorgt ervoor dat wanneer er nieuwe code wordt gepushed er automatisch wordt gecontroleerd of de bestaande code en app nog naar behoren werken. Dit doe je door tests te schrijven die vervolgens worden uitgevoerd door je pipeline.\n",
+    "\n",
+    "PS: [Hier is de Github repository](https://github.com/Mees-Molenaar/blog-daily-practices-app)\n"
    ]
   },
   {
@@ -64,6 +67,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +92,7 @@
     "      - name: Install and set Flutter version\n",
     "        uses: subosito/flutter-action@v2\n",
     "        with:\n",
-    "          flutter-version: \"3.0.5\"\n",
+    "          flutter-version: \"3.3.10\"\n",
     "          channel: \"stable\"\n",
     "\n",
     "      - name: Show Flutter version\n",
@@ -126,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +155,7 @@
     "      - name: Install and set Flutter version\n",
     "        uses: subosito/flutter-action@v2\n",
     "        with:\n",
-    "          flutter-version: \"3.0.5\"\n",
+    "          flutter-version: \"3.3.10\"\n",
     "          channel: \"stable\"\n",
     "\n",
     "      - name: Show Flutter version\n",
@@ -162,8 +167,8 @@
     "      - name: Start Chromedriver\n",
     "        run: chromedriver --port=4444 &\n",
     "\n",
-    "      - name: Run Web instrumentation test\n",
-    "        run: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server\n",
+    "      - name: Run Web integration test\n",
+    "        run: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/integration_test.dart -d web-server\n",
     "```"
    ]
   },
@@ -184,11 +189,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```yaml\n",
-    "name: flutter iphone instrumentation test\n",
+    "name: flutter iphone integration test\n",
     "\n",
     "# Perform action when code is pushed to the main branch\n",
     "on:\n",
@@ -196,14 +202,14 @@
     "    branches: [main]\n",
     "\n",
     "jobs:\n",
-    "  iphone_instrumentation_test:\n",
+    "  iphone_integration_test:\n",
     "    # NOTE: Running on macOS\n",
     "    runs-on: macOS-latest\n",
     "\n",
     "    # The device name is saved in an environment variable\n",
     "    # we use this environment variable to search for the device UDID\n",
     "    env:\n",
-    "      device: 'iPhone 13 Simulator \\(15.2\\)'\n",
+    "      device: 'iPhone 13 Simulator \\(16.0\\)'\n",
     "\n",
     "    steps:\n",
     "      # We list the simulators for debugging purposes\n",
@@ -220,7 +226,7 @@
     "      - name: Install and set Flutter version\n",
     "        uses: subosito/flutter-action@v2\n",
     "        with:\n",
-    "          flutter-version: \"3.0.5\"\n",
+    "          flutter-version: \"3.3.10\"\n",
     "          channel: \"stable\"\n",
     "\n",
     "      - name: Show Flutter version\n",
@@ -257,6 +263,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,7 +296,7 @@
     "      - name: Install and set Flutter version\n",
     "        uses: subosito/flutter-action@v2\n",
     "        with:\n",
-    "          flutter-version: \"3.0.5\"\n",
+    "          flutter-version: \"3.3.10\"\n",
     "          channel: \"stable\"\n",
     "\n",
     "      - name: Show Flutter version\n",
