Update blog post deel 4

--- a/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
+++ b/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
@@ -27,10 +27,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Flutter heb je drie soorten tests: integration, widget en unit tests. Laten we eerst kijken naar de integration tests. Dit zijn tests om de gehele app te testen. Deze test repliceert het gedrag van een gebruiker en is wat mij betreft daarom ook de belangrijkste soort test. Deze tests moeten altijd werken om te garanderen dat je app hetzelfde functioneert. Ten tweede, widget test: dit zijn tests (zoals de naam al doet vermoeden) om widgets, onderdelen van de User Interface (UI) te testen. En als laatste unit tests. Deze tests zijn handig om de werkzaamheid van losse functies of classes te testen. En deze tests zouden zo simpel moeten zijn dat ze zelfs op de pc van je oma kunnen draaien (ben de bron van deze quote kwijt). Maar waarom testen wij eigenlijk?"
+    "In Flutter heb je drie soorten tests: integration, widget en unit tests. Laten we eerst kijken naar de integration tests. Dit zijn tests om de gehele app te testen. Deze test repliceert het gedrag van een gebruiker en is wat mij betreft daarom ook de belangrijkste soort test. Deze tests moeten altijd werken om te garanderen dat je app hetzelfde functioneert. Ten tweede, widget test: dit zijn tests (zoals de naam al doet vermoeden) om widgets, onderdelen van de User Interface (UI) te testen. En als laatste unit tests. Deze tests zijn handig om de werkzaamheid van losse functies of classes te testen. En deze tests zouden zo simpel moeten zijn dat ze zelfs op de pc van je oma kunnen draaien (ben de bron van deze quote kwijt). Maar waarom testen wij eigenlijk?\n",
+    "\n",
+    "PS: [Hier is de Github repository](https://github.com/Mees-Molenaar/blog-daily-practices-app)"
    ]
   },
   {
@@ -66,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,16 +79,14 @@
     "import 'package:flutter_test/flutter_test.dart';\n",
     "import 'package:integration_test/integration_test.dart';\n",
     "\n",
-    "\n",
     "void main() {\n",
-    "  final binding = IntegrationTestWidgetsFlutterBinding.ensureInitialized();\n",
-    "\n",
+    "  IntegrationTestWidgetsFlutterBinding.ensureInitialized();\n",
     "\n",
     "  group('end-to-end test', () {\n",
     "    testWidgets('all practices are in the list and one is active',\n",
     "        (tester) async {\n",
     "      await tester.pumpWidget(\n",
-    "        DailyPracticeApp(),\n",
+    "        const DailyPracticeApp(),\n",
     "      );\n",
     "\n",
     "      // Wait till app is loaded\n",
@@ -147,10 +149,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Om de test na het maken ervan lokaal uit te voeren gebruik je deze command (integration_test is de mapnaam waar ik de integration_test heb opgeslagen)\n",
+    "\n",
     "> flutter test integration_test"
    ]
   },
@@ -191,7 +195,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, May 24 2022, 21:13:51) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
   },
   "orig_nbformat": 4,
   "vscode": {
