--- a/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
+++ b/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
@@ -170,26 +170,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[^1]: (https://cabbagemees.nl/flutter/android/devops/ci/github%20actions/2022/09/27/Flutter-app-deel-3-CI-nog-geen-CD.html)\n",
+    "[^1]: https://cabbagemees.nl/flutter/android/devops/ci/github%20actions/2022/09/27/Flutter-app-deel-3-CI-nog-geen-CD.html\n",
     "\n",
-    "[^2]: (https://cabbagemees.nl/flutter/android/devops/2022/06/27/Flutter-app-deel-1-voorbereiding.html)\n",
+    "[^2]: https://cabbagemees.nl/flutter/android/devops/2022/06/27/Flutter-app-deel-1-voorbereiding.html\n",
     "\n",
-    "[^3]: (https://github.com/flutter/flutter/tree/main/packages/integration_test#integration_test)\n",
+    "[^3]: https://github.com/flutter/flutter/tree/main/packages/integration_test#integration_test\n",
     "\n",
-    "[^4]: (https://api.flutter.dev/flutter/flutter_test/flutter_test-library.html)\n",
+    "[^4]: https://api.flutter.dev/flutter/flutter_test/flutter_test-library.html\n",
     "\n",
-    "[^5]: (https://docs.flutter.dev/cookbook/testing/widget/scrolling)\n",
+    "[^5]: https://docs.flutter.dev/cookbook/testing/widget/scrolling\n",
     "\n",
-    "[^6]: (https://docs.flutter.dev/cookbook/testing/integration/introduction)"
+    "[^6]: https://docs.flutter.dev/cookbook/testing/integration/introduction"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +201,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "5e96dc7977b545816798acbcfbbe2179ff9b80a1df2045c19cf6193f5f40622f"
    }
   }
  },
