fix: update for correct lists and footnotes

--- a/posts/2023-01-08-Flutter-app-deel-5-start-app/index.ipynb
+++ b/posts/2023-01-08-Flutter-app-deel-5-start-app/index.ipynb
@@ -69,16 +69,19 @@
     "In onderstaande Widget test zijn de tests in verschillende groepen verdeelt, omdat dit losse Widgets zijn.\n",
     "\n",
     "De eerste groep is de DailyPracticeApp groep, en die test de Widget `DailyPracticeApp`. Wanneer je deze weergeeft verwacht ik dat de `PracticesPage` wordt weergeven. De test werkt als volgt:\n",
+    "\n",
     "* Je rendert (weergeven van) de Widget met `tester.pumtWidget()`\n",
     "* Je zoekt de `PracticesPage` wordt weergeven met `find.byType()`\n",
     "* Je test de verwachting (`expect`) dat er 1 Widget met het type `PracticesPage` is gerendert (`findsOneWidget`).\n",
     "\n",
     "In bovenstaande test zit een structuur.\n",
+    "\n",
     "* De test wordt voorbereid (in dit geval door je Widget te renderen)\n",
     "* Je zoekt iets (de `PracticesPage`)\n",
     "* Je test je verwachting\n",
     "\n",
     "Deze structuur wordt Arrange, Act en Assert genoemd. Al moet ik zeggen dat Arrange en Act in dit geval zijn samengevoegd tot het renderen van de Widget. Een test die deze structuur beter aanhoud zou de volgende kunnen zijn:\n",
+    "\n",
     "* Je rendert een Widget met een knop (Arrange)\n",
     "* Je voert een actie uit, deze actie is op de knop drukken (Act)\n",
     "* Je verwacht dat onButtonClick (bijvoorbeeld) 1x wordt uitegevoerd (Assert)\n",
@@ -110,6 +113,7 @@
     "uit te voeren! Omdat er verder geen functionaliteit in de basis app hoeft te zitten kan er eindelijk aan de app gewerkt worden!\n",
     "\n",
     "PS: Ik heb van een collega geleerd om je groepen en tests op de volgende manier te benoemen:\n",
+    "\n",
     "* De buitenste groep is de class of functie naam die je wilt testen\n",
     "  * Dan schrijf je in de test wat die moet doen, dan kan je namelijk de groep en de test lezen als 1 zin.\n",
     "    * Bijvoorbeeld: DailyPracticeApp, renders PracticesPage\n",
@@ -298,6 +302,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```default\n",
+    "import 'dart:math';\n",
+    "\n",
+    "import 'package:flutter/material.dart';\n",
+    "\n",
+    "const practices = <Map<String, dynamic>>[\n",
+    "  {\n",
+    "    'id': 1,\n",
+    "    'practice': 'Sleep eight hours',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 2,\n",
+    "    'practice': 'Eat two meals instead of three',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 3,\n",
+    "    'practice': 'No TV (or YouTube)',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 4,\n",
+    "    'practice': 'No junk food',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 5,\n",
+    "    'practice': 'No complaining for one whole day',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 6,\n",
+    "    'practice': 'No gossip',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 7,\n",
+    "    'practice': 'Return an e-mail from five years ago',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 8,\n",
+    "    'practice': 'Express thanks to a friend',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 9,\n",
+    "    'practice': 'Watch a funny movie or a stand-up comic',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 10,\n",
+    "    'practice': 'Write down a list of ideas. The ideas can be about anything',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 11,\n",
+    "    'practice':\n",
+    "        'Read a spiritual text. Any one that is inspirational to you. The bible, the Tao te Ching, anything you want',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 12,\n",
+    "    'practice':\n",
+    "        'Say to yourself when you wake up, \"I am going to save a life today. Keep an eye out for that life you can save',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 13,\n",
+    "    'practice': 'Take up a hobby. Do not say you do not have time',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 14,\n",
+    "    'practice':\n",
+    "        'Write down your entire schedule. The schedule you do everyday. Cross out one item and do not do that anymore',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 15,\n",
+    "    'practice': 'Suprise someone',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 16,\n",
+    "    'practice': 'Think of ten people you are grateful for',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 17,\n",
+    "    'practice':\n",
+    "        'Forgive someone. You do not have to tell them. Just write it down on a piece of paper and burn the paper (or throw it away)',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 18,\n",
+    "    'practice': 'Take the stairs instead of the elevator',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 19,\n",
+    "    'practice':\n",
+    "        'When you find yourself thinking of that special someone who is causing you grief, think very quietly, \"No\". If you think of him and (or?) her again, think loudly, \"No!\" Again? Whisper, \"No!\" Again, say it. Louder. Yell it. Louder. And so on',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 20,\n",
+    "    'practice': 'Tell someone every day that you love them',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 21,\n",
+    "    'practice': 'Do not have sex with someone you do not love',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 22,\n",
+    "    'practice': 'Shower. Scrub. Clean the toxins of your body',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 23,\n",
+    "    'practice':\n",
+    "        'Read a chapter in a biography about someone who is an inspiration to you',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 24,\n",
+    "    'practice': 'Make plans to spend time with a friend',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 25,\n",
+    "    'practice':\n",
+    "        'If you think, \"Everything would be better of if I were death\" then think. \"That is really cool. Now I can do anything I want and I can postpone this thought for a while, maybe even a few months.\" Because what does it matter now? The planet might not even be around in a few months',\n",
+    "  },\n",
+    "  {\n",
+    "    'id': 26,\n",
+    "    'practice': 'Deep breathing',\n",
+    "  },\n",
+    "];\n",
+    "\n",
+    "final activePractice = Random().nextInt(26) + 1;\n",
+    "\n",
+    "class PracticesPage extends StatelessWidget {\n",
+    "  const PracticesPage({super.key});\n",
+    "\n",
+    "  @override\n",
+    "  Widget build(BuildContext context) {\n",
+    "    return const PracticesView();\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class PracticesView extends StatelessWidget {\n",
+    "  const PracticesView({super.key});\n",
+    "\n",
+    "  @override\n",
+    "  Widget build(BuildContext context) {\n",
+    "    return Scaffold(\n",
+    "      appBar: AppBar(\n",
+    "        title: const Text('Daily Practices'),\n",
+    "      ),\n",
+    "      body: ListView.builder(\n",
+    "        padding: const EdgeInsets.all(8),\n",
+    "        itemCount: practices.length,\n",
+    "        itemBuilder: (BuildContext context, int index) {\n",
+    "          if (index == activePractice) {\n",
+    "            return Card(\n",
+    "              key: const Key('ActivePractice'),\n",
+    "              elevation: 3,\n",
+    "              color: Theme.of(context).colorScheme.primary,\n",
+    "              child: ListTile(\n",
+    "                leading: CircleAvatar(\n",
+    "                  backgroundColor: Colors.white,\n",
+    "                  child: Text(\n",
+    "                    practices[index]['id'].toString(),\n",
+    "                  ),\n",
+    "                ),\n",
+    "                title: Text(\n",
+    "                  practices[index]['practice'],\n",
+    "                  style: const TextStyle(\n",
+    "                    color: Colors.white,\n",
+    "                  ),\n",
+    "                ),\n",
+    "              ),\n",
+    "            );\n",
+    "          } else {\n",
+    "            return Card(\n",
+    "              elevation: 3,\n",
+    "              child: ListTile(\n",
+    "                leading: CircleAvatar(\n",
+    "                  backgroundColor: Theme.of(context).colorScheme.primary,\n",
+    "                  child: Text(practices[index]['id'].toString()),\n",
+    "                ),\n",
+    "                title: Text(practices[index]['practice']),\n",
+    "              ),\n",
+    "            );\n",
+    "          }\n",
+    "        },\n",
+    "      ),\n",
+    "    );\n",
+    "  }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Als je dan nu naar `main.dart` navigeert en op de play knop drukt zal je app starten. Voor voorbeelden om je app te starten, [kan je hier kijken duidelijke uitleg vinden](https://codelabs.developers.google.com/codelabs/flutter-codelab-first#3)."
    ]
   },
@@ -316,13 +508,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[^1]: https://cabbagemees.nl/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/\n",
-    "[^2]: https://docs.flutter.dev/cookbook/testing/widget/introduction\n",
-    "[^3]: https://api.flutter.dev/flutter/material/MaterialApp-class.html\n",
-    "[^4]: https://api.flutter.dev/flutter/material/Scaffold-class.html\n",
-    "[^5]: https://api.flutter.dev/flutter/material/AppBar-class.html\n",
-    "[^6]: https://api.flutter.dev/flutter/widgets/ListView-class.html\n",
-    "[^7]: https://api.flutter.dev/flutter/material/Card-class.html"
+    "[^1]: <https://cabbagemees.nl/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/>\n",
+    "[^2]: <https://docs.flutter.dev/cookbook/testing/widget/introduction>\n",
+    "[^3]: <https://api.flutter.dev/flutter/material/MaterialApp-class.html>\n",
+    "[^4]: <https://api.flutter.dev/flutter/material/Scaffold-class.html>\n",
+    "[^5]: <https://api.flutter.dev/flutter/material/AppBar-class.html>\n",
+    "[^6]: <https://api.flutter.dev/flutter/widgets/ListView-class.html>\n",
+    "[^7]: <https://api.flutter.dev/flutter/material/Card-class.html>"
    ]
   }
  ],
