--- a/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
+++ b/posts/2022-10-16-Flutter-app-deel-4-de-integration-test/index.ipynb
@@ -196,7 +196,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13 (main, May 24 2022, 21:13:51) \n[Clang 13.1.6 (clang-1316.0.21.2)]"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
