fix missing images

--- a/posts/2023-07-05-Een Tweede Brein - Oplossen problemen Nextcloud en Obsidian/index.ipynb
+++ b/posts/2023-07-05-Een Tweede Brein - Oplossen problemen Nextcloud en Obsidian/index.ipynb
@@ -139,11 +139,11 @@
     "  * Vink de volgende vakjes aan: \"Allow cancel\", \"Cancel prevents subsequent actions running\" en \"Dark mode (als je dat wilt)\"\n",
     "  * Klik op \"OK\"\n",
     "\n",
-    " ![](Pasted%20image%2020230630143524.png)\n",
+    " ![](images/Pasted%20image%2020230630143524.png)\n",
     "\n",
     "5. Voeg nog een actie toe, \"Write to file\" en stel in (zie afbeeldingen hieronder)\n",
     "\n",
-    "![](Pasted%20image%2020230630143729.png)\n",
+    "![](images/Pasted%20image%2020230630143729.png)\n",
     "\n",
     "* Bij \"Select Folder\" kies je je Obsidian folder (ik heb in de Obsidian Vault een folder gemaakt genaamd Inbox. Hierin worden alle notities opgeslagen en die verwerk ik dan 1x in de week)\n",
     "* Vul {year}-{month_digit}-{dayofmonth}.md in bij \"filename\". De namen tussen de curly brackets ({}) zijn variabelen en die worden ingevuld door MacroDroid. Het resultaat daarvan is bijvoorbeeld 2023-06-30.md\n",
