chore: correct thumbnail image path

--- a/posts/2024-01-06-Minecraft-Bot-Rust-Deel-2/index.ipynb
+++ b/posts/2024-01-06-Minecraft-Bot-Rust-Deel-2/index.ipynb
@@ -12,7 +12,7 @@
     "toc: true\n",
     "categories: [Rust, Discord Bot, Tokio, Poise]\n",
     "page-layout: article\n",
-    "image: images/bot-progression.jpg\n",
+    "image: images/bot-progression.png\n",
     "---"
    ]
   },
